--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@android:style/Theme.NoTitleBar">
         <activity
+            android:screenOrientation="portrait"
             android:name=".StartupActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,13 +21,17 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity"></activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".MainActivity"></activity>
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".LoginActivity"
             android:label="@string/app_name">
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.administrator.achievement.FamilyTable"
             android:label="@string/family_adapter" >
         </activity>
