--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,9 +32,12 @@
         </activity>
         <activity
             android:screenOrientation="portrait"
-            android:name="com.example.administrator.achievement.FamilyTable"
+            android:name="com.example.administrator.Classroom.Achievement.FamilyTable"
             android:label="@string/family_adapter" >
         </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name="com.example.administrator.Classroom.AddCurriculum.AddCurriculumActivity" />
     </application>
 
 </manifest>
